# zakosh

./: .env.development  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: main.rs
src/shell/: commands.rs  core.rs  executor.rs  job_manager.rs  mod.rs  readline.rs  scheduler.rs  shell.rs  signals.rs  variables.rs
src/shell/executor/: executor.rs  job_manager.rs  mod.rs  variable.rs
src/shell/parser/: ast.rs  lexer.rs  mod.rs  parser.rs
src/utils/: config.rs  log.rs  mod.rs  path.rs  shell.rs  theme.rs
