[package]
name = "zagosh"
version = "0.0.1"
edition = "2021"
authors = ["Jiyu Shao <jiyu.shao@gmail.com>"]
description = "雑魚（ざこ）Shell - 一个具有嘲讽功能的 Rust Shell"
license = "MIT"

[[bin]]
name = "zago"
path = "src/main.rs"

[dependencies]
rustyline = "15.0.0"
colored = "2.1.0"
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
rand = "0.8"